paths for poduction change

--- a/app/html/components/sidebar.html
+++ b/app/html/components/sidebar.html
@@ -5,7 +5,7 @@
             <ul>
                 <li class="sidebar-brand">
                     <a  href="#">
-                        <img class="logo-img" src="../img/logo-img.png" alt="">
+                        <img class="logo-img" src="img/logo-img.png" alt="">
                     </a>
                 </li>
                 <li>
