--- a/app/html/components/small-news.html
+++ b/app/html/components/small-news.html
@@ -2,7 +2,7 @@
 <div class="col-lg-4 col-md-6    small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-1.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-1.jpg"/>
         </li>
         <li class="small-news__List-item">
                 <div class="small-news">
@@ -30,7 +30,7 @@
 <div class="col-lg-4  col-md-6   small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-2.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-2.jpg"/>
         </li>
         <li class="small-news__List-item">
             <div class="small-news">
@@ -58,7 +58,7 @@
 <div class="col-lg-4 col-md-6   small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-3.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-3.jpg"/>
         </li>
         <li class="small-news__List-item">
             <div class="small-news">
@@ -86,7 +86,7 @@
 <div class="col-lg-4 col-md-6   small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-4.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-4.jpg"/>
         </li>
         <li class="small-news__List-item">
             <div class="small-news">
@@ -114,7 +114,7 @@
 <div class="col-lg-4 col-md-6   small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-5.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-5.jpg"/>
         </li>
         <li class="small-news__List-item">
             <div class="small-news">
@@ -142,7 +142,7 @@
 <div class="col-lg-4 col-md-6  small-news-block">
     <ul class="small-news__List">
         <li class="small-news__List-item">
-            <img class="small-news__img" src="../../img/news-thumb-6.jpg"/>
+            <img class="small-news__img" src="img/news-thumb-6.jpg"/>
         </li>
         <li class="small-news__List-item">
             <div class="small-news">
