--- a/app/html/components/big-news.html
+++ b/app/html/components/big-news.html
@@ -8,7 +8,7 @@
             </h4>
         <div class="row short-description">
             <div class="col-lg-7 col-xs-12">
-                <img class="img-fluid" src="../img/big-news.jpg" alt="">
+                <img class="img-fluid" src="img/big-news.jpg" alt="">
             </div>
             <div class="col-lg-5 col-xs-12 big-news__content-wrap">
                 <ul class="big-news__description">
@@ -39,7 +39,7 @@
                 <ul class="big-news__social">
                     <li class="big-news__social-item big-news__social-vk">
                         <a href="#">
-                            <img src="../img/vk.jpg" alt="">
+                            <img src="img/vk.jpg" alt="">
                         </a>
                     </li>
                     <li class="big-news__social-item big-news__social-facebook">
